# workshop

./: .gitignore  1-what-is-overture.md  2-accessing-data.md  3-geoparquet-duckdb.md  4-gers.md  5-base-theme.md  6-lsib-demo.md  7-buildings-matching.md  8-matching-concepts.md  README.md  mgcp_fcode_names.csv  overture_latest.dbb  pyproject.toml  requirements.txt  sandbox.html
.devcontainer/: devcontainer.json
.github/workflows/: staging_deploy.yml
data/: buildings_with_places.geojson  charleston_places_h3.csv  explorer-buildings.geojson  explorer-places.geojson  global_place_density.csv  na_dem_h3.csv  na_dem_h3_hi.csv  na_dem_h3_lo.csv  overture_buildings.geojson  overture_charleston_places.geojson  south_carolina_place_density.csv  south_carolina_transportation_connector_density.csv
js/: explorer.js  sandbox.js
notebooks/: 1-getting-started.ipynb  1-overturemaps-lonboard.ipynb  2-duckdb.ipynb  3-lsib-demo.ipynb  3-lsib-overture.ipynb  4-buildings-matching.ipynb  README.md  duckdb.ipynb  overturemaps-lonboard.ipynb
results/: global_overture_address_density.csv  new_places_slc.geojson  new_places_slc_with_fb_pages.geojson  slc_h3_density.csv  slc_hierarchies.geojson  south_carolina_transportation_connector_density.csv  tmp_new_places_slc_with_fb_pages.geojson
slides/: GERS-ecosystem-extra.md  GERS.md  explore-with-fused.md  exploring-data.md  index.html  intro.md  matching-demos.md  setup.md
